Added more structure to html doc + CSS flex

--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Discord</title>
 </head>
 <body>
     <div class="container">
-        
+        <header class="header-container">
+            <div id="logo">LOGO</div>
+            <nav>
+                <ul>
+                    <li><a href=""></a>Link</li>
+                    <li><a href=""></a>Link</li>
+                    <li><a href=""></a>Link</li>
+                    <li><a href=""></a>Link</li>
+                    <li><a href=""></a>Link</li>
+                </ul>
+            </nav>
+            <div><a href=""></a>Login</div>
+        </header>
+        <main>
+            <div class="blue">riga1
+                <div class="pink">pink</div>
+            </div>
+            <div>riga2</div>
+            <div>riga3</div>
+            <div>riga4</div>
+            <div>riga5</div>
+            <div>riga6</div>
+        </main>
+        <footer>
+
+        </footer>
     </div>
 </body>
 </html>
