--- a/index.html
+++ b/index.html
@@ -23,14 +23,25 @@
             <div><a href=""></a>Login</div>
         </header>
         <main>
-            <div class="blue">riga1
-                <div class="pink">pink</div>
-            </div>
-            <div>riga2</div>
-            <div>riga3</div>
-            <div>riga4</div>
-            <div>riga5</div>
-            <div>riga6</div>
+            <section class="main-row1">
+                <div class="fucsia-box">Riga1</div>
+            </section>
+            <section class="main-row2">
+                <div class="box1">Box1</div>
+                <div class="box2">Box2</div>
+            </section>
+            <!-- <section> -->
+                <!-- <div class="fucsia-box">Riga3</div></section>
+            </section>
+            <section>
+                <div class="fucsia-box">Riga4</div></section>
+            </section> -->
+            <section>
+                <div class="fucsia-box">Riga5</div></section>
+            </section>
+            <section>
+                <div class="fucsia-box">Riga2</div></section>
+            </section>
         </main>
         <footer>
 
