Completed main section and footer + CSS

--- a/index.html
+++ b/index.html
@@ -26,25 +26,39 @@
             <section class="main-row1">
                 <div class="fucsia-box">Riga1</div>
             </section>
+
             <section class="main-row2">
                 <div class="box1">Box1</div>
                 <div class="box2">Box2</div>
             </section>
-            <!-- <section> -->
-                <!-- <div class="fucsia-box">Riga3</div></section>
+
+            <section class="main-row3">
+                <div class="box1">Box1</div>
+                <div class="box2">Box2</div>
             </section>
-            <section>
-                <div class="fucsia-box">Riga4</div></section>
-            </section> -->
-            <section>
-                <div class="fucsia-box">Riga5</div></section>
+
+            <section class="main-row2">
+                <div class="box1">Box1</div>
+                <div class="box2">Box2</div>
             </section>
-            <section>
-                <div class="fucsia-box">Riga2</div></section>
+
+            <section class="main-row5">
+                <div class="box3">Box3</div></section>
+            </section>
+
+            <section class="main-row6">
+                <div class="bottom-box1"></div>
+                <div class="bottom-box2"></div>
+                <div class="bottom-box2"></div>
+                <div class="bottom-box2"></div>
+                <div class="bottom-box2"></div>
             </section>
         </main>
         <footer>
-
+            <div class="footer-box">
+                <div class="bottom-btn">Logo</div>
+                <div class="bottom-btn">Bottone</div>
+            </div>
         </footer>
     </div>
 </body>
