--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- HEADER SECTION -->
         <header class="header-container">
             <div id="logo">LOGO</div>
             <nav>
@@ -22,6 +23,9 @@
             </nav>
             <div><a href=""></a>Login</div>
         </header>
+        <!-- /HEADER SECTION -->
+
+        <!-- MAIN SECTION -->
         <main>
             <section class="main-row1">
                 <div class="fucsia-box">Riga1</div>
@@ -54,12 +58,16 @@
                 <div class="bottom-box2"></div>
             </section>
         </main>
+        <!-- /MAIN SECTION -->
+
+        <!-- FOOTER SECTION -->
         <footer>
             <div class="footer-box">
                 <div class="bottom-btn">Logo</div>
                 <div class="bottom-btn">Bottone</div>
             </div>
         </footer>
+        <!-- /FOOTER SECTION -->
     </div>
 </body>
 </html>
